# mif

./: .gitignore  .readthedocs.yml  .travis.yml  LICENSE  README.md  mkdocs.yml  pyproject.toml  setup.py  tox.ini
.github/workflows/: test.yaml
docs/: index.md  reference.md
mif/: __init__.py  __main__.py  grammar.bnf
tests/: __init__.py
tests/data/: example-wide.mif  example.mif
