[project]
dynamic = ['version']
name = 'mif'
description = 'reading and writing MIF files'
readme = 'README.md'
authors = [
    {name = 'Aaron Griffith', email = 'aargri@gmail.com'},
]
license = 'MIT'
license-files = ['LICENSE']

urls.Source = 'https://github.com/agrif/mif/'
urls.Documentation = 'https://mif.readthedocs.io/en/latest/'

keywords = ['memory', 'mif', 'quartus']
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)',
]

requires-python = '>= 3.9'
dependencies = [
    'numpy >= 1.17.0',
    'lark >= 0.12.0',
    'importlib-resources >= 5.12, < 6.0',
]

[project.optional-dependencies]
docs = ['mkdocs >= 1.2, < 1.3', 'mkautodoc >= 0.2.0']

[build-system]
requires = ['setuptools >= 77.0.3', 'setuptools-scm[simple] >= 8']
build-backend = 'setuptools.build_meta'

[tool.setuptools]
packages = ['mif']
